Fix: add blank space for easier readability + header resize

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 .headerImage {
     max-width: 100vw;
-    height: 450px;
     padding-top: 1rem;
 }
 
